<resources>
    <string name="app_name">WelcomeVisitor</string>
    <string name="visitor_company_hint">Enter the name of your company.</string>
    <string name="visitor_last_name_label">Last Name</string>
    <string name="visitor_last_name_hint">Last name</string>
    <string name="visitor_first_name_label">First Name</string>
    <string name="visitor_first_name_hint">First Name</string>
    <string name="visitor_arrival_date_label">Time of arrival</string>
    <string name="visitor_arrival_date_now">NOW</string>
    <string name="visitor_arrival_date_pick">CHOOSE</string>
    <string name="visitor_departure_date_label">Time of departure</string>
    <string name="list_item_visitor_exit_button_label">Exit</string>
    <string name="visitor_internal_ref_label">Novem reference person</string>
    <string name="visitor_supervisor_hint">Enter the name of your internalRef.</string>
    <string name="aim_of_the_visit">Aim of the visit</string>
    <string name="visitor_aim_hint">Enter a short description about the aim of your visit.</string>
    <string name="date_picker_title">Choose a time:</string>
    <string name="new_visitor">New visitor</string>
    <string name="save_subtitle">Save</string>
    <string name="exit_visitor_title">Exit</string>
    <string name="exit_text_view">Are you leaving now?</string>
    <string name="visitor_selected_format">%1$d visitors selected</string>
    <string name="register_page_2">Page 2</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="visitor_company_label">Your company:</string>
    <string name="next_button">Next &gt;</string>
    <string name="add_visitor_button">Add visitor</string>
    <string name="remove_visitor_button">- Remove Visitor</string>
    <string name="ok_enter">Check-in</string>
    <string name="title_activity_splash">Guestbook</string>
    <string name="title_activity_company_list">CompanyListActivity</string>
    <string name="visitor_number_label"># visitors</string>
    <string name="company_error_hint">Check the field</string>
    <string name="add_remove_visitor_button">Add/Remove visitor</string>
    <string name="check_in">Check-in</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="purpose_visit">Purpose of the visit</string>
    <string name="employee_meet">Employee to meet</string>
    <string name="employee_meet_hint">Insert the name of the person you have to meet</string>
    <string name="back_button">&lt; Back</string>
    <string name="check_out">Check-out</string>
    <string name="choose_company">Choose your company</string>
    <string name="choose_visitor">Select one or more visitors</string>
    <string name="check_in_toast">You are now checked-in</string>
    <string name="check_out_toast">You have been successfully checked-out</string>
    <string name="check_in_time">Check-in time</string>
    <string name="visitor_name_label">Name</string>
    <string name="admin_login">Admin area</string>
    <string name="title_admin_table_activity">Guestbook</string>
    <string name="guestbook_textview">Guestbook</string>
    <string name="purpose_visit_label">Purpose</string>
    <string name="employee_label">Ref Employee</string>
    <string name="date_label">Date</string>
    <string name="checked_out_label">Now inside</string>
    <string name="company_label">Company</string>
    <string name="password_title">Enter password:</string>
    <string name="choose_period_option">Choose export period:</string>
    <string-array name="purpose_choice">
        <item>Meeting</item>
        <item>Interview</item>
        <item>Maintenance</item>
        <item>Other</item>
    </string-array>
    <string-array name="time_spinner_choice">
        <item>Last 6 months</item>
        <item>Last year</item>
        <item>All data</item>
    </string-array>
    <plurals name="numberOfVisitorsCounted">
        <item quantity="one">%d visitor selected</item>
        <item quantity="few">%d visitors selected</item>
        <item quantity="other">%d visitors selected</item>
    </plurals>
    <plurals name="numberOfVisitorsPresent">
        <item quantity="one">There is %d guest in the company</item>
        <item quantity="few">There are %d guests in the company</item>
        <item quantity="other">There are %d guests in the company</item>
    </plurals>

</resources>
