<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visitor_company_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/visitor_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visitor_company_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visitor_last_name_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/visitor_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visitor_last_name_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visitor_first_name_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/visitor_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visitor_first_name_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visitor_internal_ref_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/visitor_internal_ref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visitor_supervisor_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visitor_arrival_date_label"
        style="?android:listSeparatorTextViewStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/visitor_arrival_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="2"
            />
        <Button
            android:id="@+id/visitor_arrival_date_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/visitor_arrival_date_now"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/visitor_arrival_date_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/visitor_arrival_date_pick"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aim_of_the_visit"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/visitor_aim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/visitor_aim_hint"/>


</LinearLayout>