<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    android:id="@+id/container_admin_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_widthPercent="100%">

        <TextView
            android:id="@+id/guestbook_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:text="@string/guestbook_textview"
            android:layout_marginBottom="40dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/search_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>
            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="Search..."
                android:layout_marginBottom="25dp"
                android:layout_toRightOf="@id/search_ic"

                />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/visitor_name_label"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/company_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/last_name_label"
                android:layout_centerVertical="true"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/company_label"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/purpose_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/company_label"
                android:layout_centerVertical="true"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/purpose_visit_label"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/purpose_label"
                android:layout_centerVertical="true"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/date_label"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/checked_out_label"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="16dp"
                android:text="@string/checked_out_label"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:background="@android:color/darker_gray"/>

            <View
                android:id="@+id/low_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/last_name_label"
                android:background="@android:color/darker_gray"/>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/visitor_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="700dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floating_action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="24dp"
            android:src="@drawable/ic_share"
            app:layout_anchor="@id/visitor_recycler_view"
            app:layout_anchorGravity="bottom|right|end" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_pane"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/novemColor">

        <Button
            android:id="@+id/back_button"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:background="@color/novemColor"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_alignParentStart="true"
            android:text="@string/back_button"/>

        <!--android:layout_centerInParent="true"/>-->
    </RelativeLayout>

    </android.support.percent.PercentRelativeLayout>